fix issue with minimap not aligning plot and images correctly when using sliders

--- a/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
+++ b/projects/web-mev/src/app/d3/components/spatialge-clusters/spatialge-clusters.component.scss
@@ -193,9 +193,7 @@ mat-slider {
 }
 
 .miniMapContainer {
-    position: absolute; /* Position it relative to the overlayDiv */
-    // top: 450px;
-    // left: 350px;
+    position: absolute;
 }
 
 .zoomButtonContainer {
@@ -230,14 +228,6 @@ mat-slider {
     margin: 1px;
 }
 
-// .horizontalSliderContainer mat-slider {
-//     // width: 290px;
-// }
-
-// .verticalSliderContainer mat-slider {
-//     // height: 375px;
-// }
-
 .disabled-label {
     color: #999;
     pointer-events: none;
@@ -246,10 +236,6 @@ mat-slider {
 .nonOverlay {
     margin-top: 10px;
     overflow: hidden;
-}
-
-.substituteImage {
-    background-color: rgba(232, 125, 30, 0.25);
 }
 
 .hiddenDiv {
@@ -275,7 +261,6 @@ mat-slider {
     box-shadow: none !important;
 }
 
-/* Optionally, you can remove the padding to reduce spacing */
 ::ng-deep .mat-expansion-panel-body {
     padding: 0 !important;
 }
@@ -290,6 +275,11 @@ mat-slider {
     font-weight: 400;
 }
 
-mat-expansion-panel-header:hover {
-    background-color: white
+.mat-expansion-panel-header:hover {
+    background-color: white;
+}
+.mat-expansion-panel-header {
+    padding: 0px !important;
+    font-weight: bold;
+    font-size: 14px !important;
 }
